crates/api-client-server-macros/tests/ui/missing_return_type.rs
use api_macros::api;

pub struct MyApp;

#[api]
impl MyApp {
    #[api_handler(method = "GET", path = "/health")]
    pub async fn health(&self) {
        // Missing return type
    }
}

fn main() {}
